--- a/template/stacks/lapp.yaml
+++ b/template/stacks/lapp.yaml
@@ -15,7 +15,7 @@ services:
       - 10009:10009
     volumes:
       - /your/home/directory/docker/volumes/bitcoin/lnd:/root/.lnd
-  lviz:
+  lapp:
     image: lapp:latest
     restart: always
     ports:
