--- a/template/containers/lapp/Dockerfile
+++ b/template/containers/lapp/Dockerfile
@@ -1,3 +1,3 @@
-FROM ubuntu:xenial
+FROM lapp_base:latest
 
-CMD ./lncli --rpcserver lnd:10009 getinfo && ping www.google.de
+CMD lncli --rpcserver lnd:10009 getinfo && ping www.google.de
