--- a/template/volumes/bitcoin/lnd/lnd.conf
+++ b/template/volumes/bitcoin/lnd/lnd.conf
@@ -1,6 +1,5 @@
 [Application Options]
 debuglevel=info
-debughtlc=true
 maxpendingchannels=10
 externalip=YOUREXTERNALIP
 color=YOURCOLOR
@@ -18,7 +17,8 @@ bitcoin.mainnet=1
 [Bitcoind]
 bitcoind.rpcuser=bitcoin
 bitcoind.rpcpass=YOURRPCPASSWORD
-bitcoind.zmqpath=tcp://bitcoin:18501
+bitcoind.zmqpubrawblock=tcp://bitcoin:18501
+bitcoind.zmqpubrawtx=tcp://bitcoin:18502
 bitcoind.rpchost=bitcoin
 
 [autopilot]
